--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
     gtag('js', new Date());
     gtag('config', 'UA-44602877-3');
   </script>
+  <style>
+    .center {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 <html>
   <body>
-    <h1>Hi, I'm Bình</h1>
+    <div class="center">
+      <h1>Hi, I'm Bình</h1>
+    </div>
   </body>
 </html>
