--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-44602877-3');
     </script>
+    <!-- End -->
     <style>
       .center {
         position: fixed;
