--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://blcsntb.gitbook.io/wiki/" />
+<meta http-equiv="refresh" content="0; url=https://binhapp.gitbook.io/wiki/" />
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44602877-3"></script>
 <script>
