--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="center">
-      <h1>Hi, I'm Bình2</h1>
+      <h1>Hi, I'm Bình (blcsntb)</h1>
     </div>
   </body>
 </html>
