--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   </head>
   <body>
     <div class="center">
-      <h1>Hi, I'm Bình (blcsntb)</h1>
+      <h1>Hi,</h1>
+      <h1>Binh Nguyen</h1>
+      <h1>(blcsntb)</h1>
     </div>
   </body>
 </html>
