--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="center">
       <h1>Hi,</h1>
-      <h1>Binh Nguyen</h1>
+      <h1>I'm Binh Nguyen</h1>
       <h1>(blcsntb)</h1>
     </div>
   </body>
