--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   </head>
   <body>
     <div class="center">
-      <h1>Hi,</h1>
-      <h1>I'm Binh Nguyen</h1>
-      <h1>(blcsntb)</h1>
+      <h1>Hi, I'm Binh (blcsntb)</h1>
     </div>
   </body>
 </html>
