--- a/spotify.html
+++ b/spotify.html
@@ -1,1 +1,17 @@
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/485ZBvx89ZzKuDS5Cjlyc3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44602877-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-44602877-3');
+    </script>
+    <!-- End -->
+  </head>
+  <body>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6wTAN0Eql9HC5imsdiyb3l?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </body>
+</html>
