--- a/spotify.html
+++ b/spotify.html
@@ -12,6 +12,6 @@
     <!-- End -->
   </head>
   <body>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6wTAN0Eql9HC5imsdiyb3l?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6wTAN0Eql9HC5imsdiyb3l?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </body>
 </html>
