--- a/spotify.html
+++ b/spotify.html
@@ -1,1 +1,10 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WDV4LQV6VS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-WDV4LQV6VS');
+</script>
+
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6wTAN0Eql9HC5imsdiyb3l?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
