--- a/today.html
+++ b/today.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44602877-3"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WDV4LQV6VS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'UA-44602877-3');
+      gtag('config', 'G-WDV4LQV6VS');
     </script>
-    <!-- End -->
   </head>
   <body>
     <p id="id2">Date</p>
