feat: add meta viewport

--- a/spotify.html
+++ b/spotify.html
@@ -7,4 +7,6 @@
   gtag('config', 'G-WDV4LQV6VS');
 </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6wTAN0Eql9HC5imsdiyb3l?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
