feat: add meta viewport

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       gtag('js', new Date());
       gtag('config', 'G-WDV4LQV6VS');
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       .center {
         position: fixed;
