--- a/ios.html
+++ b/ios.html
@@ -50,33 +50,31 @@
         }
 
         #slider {
-            position: absolute;
-            bottom: 20px; /* Điều chỉnh khoảng cách bên dưới theo nhu cầu */
-            left: 0;
-            right: 0;
+            position: relative;
             width: 100%;
-            height: 40px;
-            background: linear-gradient(to right, #4e4e4e, #8e8e8e);
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-            cursor: pointer;
-            transition: 0.3s ease-out;
-        }
-
-        #slider:hover {
-            background: linear-gradient(to right, #8e8e8e, #b4b4b4);
+            height: 4px;
+            background: #fff;
+            overflow: hidden;
         }
 
         #slider:before {
             content: "";
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 60px;
-            height: 6px;
-            background-color: #fff;
-            border-radius: 3px;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right, transparent 0%, #fff 50%, transparent 100%);
+            animation: slideAnimation 2s infinite linear;
+        }
+
+        @keyframes slideAnimation {
+            0% {
+                left: -100%;
+            }
+            100% {
+                left: 100%;
+            }
         }
     </style>
 </head>
