style: update index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <div class="center">
       <h1>Hi, I'm Binh (blcsntb)</h1>
+      <h2>(blcsntb)</h2>
     </div>
   </body>
 </html>
