chore: fix typo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="center">
-      <h1>Hi, I'm Binh (blcsntb)</h1>
+      <h1>Hi, I'm Binh</h1>
       <h2>(blcsntb)</h2>
     </div>
   </body>
