style: make h2 center

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <div class="center">
       <h1>Hi, I'm Binh</h1>
-      <h2>(blcsntb)</h2>
+      <h2 style="text-align: center">(blcsntb)</h2>
     </div>
   </body>
 </html>
