--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
+      body {
+        font-family: monospace;
+      }
     </style>
   </head>
   <body>
