--- a/spotify.html
+++ b/spotify.html
@@ -7,7 +7,8 @@
   gtag('config', 'G-WDV4LQV6VS');
 </script>
 
-<meta name="google-adsense-account" content="ca-pub-7123256349168057">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7123256349168057"
+     crossorigin="anonymous"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
