feat: add adsense

--- a/today.html
+++ b/today.html
@@ -9,6 +9,8 @@
       gtag('js', new Date());
       gtag('config', 'G-WDV4LQV6VS');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7123256349168057"
+    crossorigin="anonymous"></script>
   </head>
   <body>
     <p id="id2">Date</p>
