feat: update beta page

--- a/beta.html
+++ b/beta.html
@@ -1,4 +1,3 @@
-
-Android: https://play.google.com/store/apps/details?id=com.bami.app
-
-iOS: https://testflight.apple.com/join/6nFYBXl7
+<a href="https://play.google.com/store/apps/details?id=com.bami.app">Android</a>
+<br />
+<a href="https://testflight.apple.com/join/6nFYBXl7">iOS</a>
