--- a/beta.html
+++ b/beta.html
@@ -1,3 +1,4 @@
 <a href="https://play.google.com/store/apps/details?id=com.bami.app">Android</a>
+<a href="https://play.google.com/apps/testing/com.bami.app">Android</a>
 <br />
 <a href="https://testflight.apple.com/join/6nFYBXl7">iOS</a>
