--- a/debug.html
+++ b/debug.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
 
-<h2>JavaScript</h2>
+    <h2>JavaScript</h2>
 
-<p>JavaScript evaluates expressions from left to right. Different sequences can produce different results:</p>
+    <p>JavaScript evaluates expressions from left to right. Different sequences can produce different results:</p>
 
-<p id="demo"></p>
+    <p id="demo"></p>
+    <p id="userAgent"></p>
 
-<script>
-/**
- * Determine the mobile operating system.
- * This function returns one of 'iOS', 'Android', 'Windows Phone', or 'unknown'.
- *
- * @returns {String}
- */
-function getMobileOperatingSystem() {
-    var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+ <script>
+   /**
+    * Determine the mobile operating system.
+     * This function returns one of 'iOS', 'Android', 'Windows Phone', or 'unknown'.
+      *
+       * @returns {String}
+        */
+   var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+   function getMobileOperatingSystem() {
 
-    // Windows Phone must come first because its UA also contains "Android"
-    if (/windows phone/i.test(userAgent)) {
-        return "Windows Phone";
-    }
+         // Windows Phone must come first because its UA also contains "Android"
+         if (/windows phone/i.test(userAgent)) {
+                   return "Windows Phone";
+               }
 
-    if (/android/i.test(userAgent)) {
-        return "Android";
-    }
+         if (/android/i.test(userAgent)) {
+                   return "Android";
+               }
 
-    // iOS detection from: http://stackoverflow.com/a/9039885/177710
-    if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-        return "iOS";
-    }
+         // iOS detection from: http://stackoverflow.com/a/9039885/177710
+         if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                   return "iOS";
+               }
 
-    return "unknown";
-}
-let x = getMobileOperatingSystem();
-document.getElementById("demo").innerHTML = x;
-</script>
+         return "unknown";
+   }
+   let x = getMobileOperatingSystem();
+   document.getElementById("demo").innerHTML = x;
+   document.getElementById("userAgent").innerHTML = userAgent;
+ </script>
 
-</body>
+  </body>
 </html>
-
 
