feat: add links

--- a/index.html
+++ b/index.html
@@ -20,12 +20,29 @@
       body {
         font-family: monospace;
       }
+      a {
+        color: #000000;
+        text-decoration: none;
+        margin-right: 8px;
+      }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="center">
       <h1>Hi, I'm Binh</h1>
       <h2 style="text-align: center">(blcsntb)</h2>
+      <center>
+        <a href="https://github.com/binhapp">
+          <i class="fa fa-github" style="font-size:24px"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/blcsntb/">
+          <i class="fa fa-linkedin" style="font-size:24px"></i>
+        </a>
+        <a href="https://www.facebook.com/blcsntb">
+          <i class="fa fa-facebook" style="font-size:24px"></i>
+        </a>
+      </center>
     </div>
   </body>
 </html>
