style: click link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
       .center {
         position: fixed;
-        top: 50%;
+        top: 40%;
         left: 50%;
         transform: translate(-50%, -50%);
       }
@@ -33,13 +33,13 @@
       <h1>Hi, I'm Binh</h1>
       <h2 style="text-align: center">(blcsntb)</h2>
       <center>
-        <a href="https://github.com/binhapp">
+        <a target="_blank" href="https://github.com/binhapp">
           <i class="fa fa-github" style="font-size:24px"></i>
         </a>
-        <a href="https://www.linkedin.com/in/blcsntb/">
+        <a target="_blank" href="https://www.linkedin.com/in/blcsntb/">
           <i class="fa fa-linkedin" style="font-size:24px"></i>
         </a>
-        <a href="https://www.facebook.com/blcsntb">
+        <a target="_blank" href="https://www.facebook.com/blcsntb">
           <i class="fa fa-facebook" style="font-size:24px"></i>
         </a>
       </center>
