--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a target="_blank" href="https://github.com/binhapp">
           <i class="fa fa-github" style="font-size:24px"></i>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/blcsntb/">
+        <a target="_blank" href="https://www.linkedin.com/in/binhapp">
           <i class="fa fa-linkedin" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://www.facebook.com/blcsntb">
