--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <a target="_blank" href="https://www.linkedin.com/in/binhapp">
           <i class="fa fa-linkedin" style="font-size:24px"></i>
         </a>
+        <a target="_blank" href="https://x.com/blcsntb">
+          <i class="fa fa-twitter" style="font-size:24px"></i>
+        </a>
         <a target="_blank" href="https://www.facebook.com/blcsntb">
           <i class="fa fa-facebook" style="font-size:24px"></i>
         </a>
