--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <a target="_blank" href="https://www.facebook.com/blcsntb">
           <i class="fa fa-facebook" style="font-size:24px"></i>
         </a>
+        <a target="_blank" href="https://stackoverflow.com/users/5463717/blcsntb">
+          <i class="fa fa-stack-overflow" style="font-size:24px"></i>
+        </a>
         <a target="_blank" href="https://binhapp.github.io">
           <i class="fa fa-wikipedia-w" style="font-size:24px"></i>
         </a>
