--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a target="_blank" href="https://stackoverflow.com/users/5463717/blcsntb">
           <i class="fa fa-stack-overflow" style="font-size:24px"></i>
         </a>
-        <a target="_blank" href="https://binhapp.github.io">
+        <a target="_blank" href="https://binhapp.gitbook.io">
           <i class="fa fa-wikipedia-w" style="font-size:24px"></i>
         </a>
       </center>
