fea: update cdn css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         margin-right: 8px;
       }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
   <body>
     <div class="center">
@@ -34,22 +34,22 @@
       <h2 style="text-align: center">(blcsntb)</h2>
       <center>
         <a target="_blank" href="https://github.com/binhapp">
-          <i class="fa fa-github" style="font-size:24px"></i>
+          <i class="fa-brands fa-github" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/binhapp">
-          <i class="fa fa-linkedin" style="font-size:24px"></i>
+          <i class="fa-brands fa-linkedin" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://x.com/blcsntb">
-          <i class="fa fa-twitter" style="font-size:24px"></i>
+          <i class="fa-brands fa-x-twitter" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://www.facebook.com/blcsntb">
-          <i class="fa fa-facebook" style="font-size:24px"></i>
+          <i class="fa-brands fa-facebook" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://stackoverflow.com/users/5463717/blcsntb">
-          <i class="fa fa-stack-overflow" style="font-size:24px"></i>
+          <i class="fa-brands fa-stack-overflow" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://binhapp.gitbook.io">
-          <i class="fa fa-wikipedia-w" style="font-size:24px"></i>
+          <i class="fa-brands fa-wikipedia-w" style="font-size:24px"></i>
         </a>
       </center>
     </div>
