--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@
         <a target="_blank" href="https://www.facebook.com/blcsntb">
           <i class="fa-brands fa-facebook" style="font-size:24px"></i>
         </a>
-        <a target="_blank" href="https://stackoverflow.com/users/5463717/blcsntb">
-          <i class="fa-brands fa-stack-overflow" style="font-size:24px"></i>
-        </a>
         <a target="_blank" href="https://binhapp.gitbook.io">
-          <i class="fa-brands fa-wikipedia-w" style="font-size:24px"></i>
+          <i class="fa-brands fa-blogger" style="font-size:24px"></i>
         </a>
       </center>
     </div>
