--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <i class="fa-brands fa-facebook" style="font-size:24px"></i>
         </a>
         <a target="_blank" href="https://binhapp.gitbook.io">
-          <i class="fa-solid fa-user" style="font-size:24px"></i>
+          <i class="fa-solid fa-user fa-bounce" style="font-size:24px"></i>
         </a>
       </center>
     </div>
