--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <a target="_blank" href="https://github.com/binhapp">
           <i class="fa-brands fa-github"></i>
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/binhapp">
+        <a target="_blank" href="https://linkedin.com/in/binhapp">
           <i class="fa-brands fa-linkedin"></i>
         </a>
         <a target="_blank" href="https://x.com/blcsntb">
           <i class="fa-brands fa-x-twitter"></i>
         </a>
-        <a target="_blank" href="https://www.facebook.com/blcsntb">
+        <a target="_blank" href="https://facebook.com/blcsntb">
           <i class="fa-brands fa-facebook"></i>
         </a>
         <a target="_blank" href="https://binhapp.gitbook.io">
