--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       gtag('config', 'G-WDV4LQV6VS');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=light" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=dark" type="image/png" media="(prefers-color-scheme: dark)">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <style>
       :root {
         --text: #000;
@@ -41,8 +44,6 @@
         transform: translate(-50%, -50%);
       }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  </head>
   <body>
     <div class="center">
       <h1>Hi, I'm Binh</h1>
@@ -60,7 +61,7 @@
         <a target="_blank" href="https://facebook.com/blcsntb">
           <i class="fa-brands fa-facebook"></i>
         </a>
-        <a target="_blank" href="https://binhapp.gitbook.io">
+        <a target="_blank" href="https://blcsntb.gitbook.io">
           <i class="fa-solid fa-user fa-bounce"></i>
         </a>
       </center>
