feat: add favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       gtag('config', 'G-WDV4LQV6VS');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=light" type="image/png" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=dark" type="image/png" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <style>
       :root {
