refactor: rename folder to cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -7,4 +7,4 @@
   gtag('config', 'G-WDV4LQV6VS');
 </script>
 
-<meta http-equiv="refresh" content="0; url=https://binhapp.gitbook.io/wiki/" />
+<meta http-equiv="refresh" content="0; url=https://blcsntb.gitbook.io/cv/" />
