feat: add title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       gtag('js', new Date());
       gtag('config', 'G-WDV4LQV6VS');
     </script>
+    <title>Binh (blcsntb)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=light" type="image/png" media="(prefers-color-scheme: light)">
     <link rel="icon" href="https://blcsntb.gitbook.io/cv/~gitbook/icon?size=small&amp;theme=dark" type="image/png" media="(prefers-color-scheme: dark)">
