feat: update logo facebook

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <i class="fa-brands fa-x-twitter"></i>
         </a>
         <a target="_blank" href="https://facebook.com/blcsntb">
-          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-square-facebook"></i>
         </a>
         <a target="_blank" href="https://blcsntb.gitbook.io">
           <i class="fa-solid fa-user fa-bounce"></i>
