chore: update href

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a target="_blank" href="https://facebook.com/blcsntb">
           <i class="fa-brands fa-square-facebook"></i>
         </a>
-        <a target="_blank" href="https://blcsntb.gitbook.io">
+        <a target="_blank" href="https://blcsntb.gitbook.io/cv">
           <i class="fa-solid fa-user fa-bounce"></i>
         </a>
       </center>
