feat: update twitter account

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a target="_blank" href="https://linkedin.com/in/binhapp">
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a target="_blank" href="https://x.com/blcsntb">
+        <a target="_blank" href="https://x.com/binhapp">
           <i class="fa-brands fa-x-twitter"></i>
         </a>
         <a target="_blank" href="https://facebook.com/blcsntb">
